src/objects/CloneObject__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Req #1237,1239,1240</description>
    <fields>
        <fullName>Field_API__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field API</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>CloneRecord</label>
</CustomObject>